@@ -25,7 +25,7 @@ use DynaLoader;
 use vars qw($VERSION @EXPORT @ISA);
 
 BEGIN {
-    $VERSION = '@PACKAGE_VERSION@';
+    $VERSION = '3.05';
 }
 
 # use base qw(Exporter) requires Perl 5.8 and we still support Perl 5.6.
