@@ -16,6 +16,14 @@ remctl 3.5 (unreleased)
     met, remctl_set_ccache will only affect the remctl context on which
     it's called.
 
+    The version numbers of the Net::Remctl and Net::Remctl::Backend Perl
+    modules now match the versions of the remctl package, but with at
+    least two digits for the minor version so that, for example, 3.9
+    (which becomes 3.09) and 3.10 will sort properly as numbers.  This
+    means that, from Perl's perspective, the version numbers have gone
+    backwards in this release relative to earlier 3.0 releases.  This is a
+    one-time adjustment to a more reliable versioning scheme.
+
 remctl 3.4 (2013-03-26)
 
     Add new C APIs for establishing a remctl connection given a sockaddr,
